# GCGS-Central-Digital-Platform

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .mise.toml  AUTHENTICATION.md  Dockerfile  GCGS-Central-Digital-Platform.sln  GCGS-Central-Digital-Platform.slnLaunch  LOCAL-RUNBOOK.md  Makefile  README.md  compose.common.yml  compose.override.yml.template  compose.yml  index.html  organisation-information.sln  testAutomation1.sql  testautomation-backup.sql
.claude/: launch.json
.config/: dotnet-tools.json
CO.CDP.ApplicationRegistry.App/: .refitter  ApiBearerTokenHandler.cs  CO.CDP.ApplicationRegistry.App.csproj  ISession.cs  Program.cs  Session.cs  SnakeCaseParameterTransformer.cs  appsettings.Development.json  appsettings.json
DataSharing.Tests/: DataSharing.Tests.csproj
E2ETests/: Dockerfile  E2ETests.cs  E2ETests.csproj  E2ETests.sln  appsettings.Development.json  appsettings.json  compose.yml
Forms/: Dockerfile
Forms.Tests/: UnitTest1.cs
Organisation/: Organisation.http
Person/: Dockerfile
Tenant/: Dockerfile  Makefile  Program.cs  Tenant.http
docs/: 01-Introduction.adoc  02-overview.adoc  03-software-architecture.adoc  Dockerfile  Makefile  docinfo.html  index.adoc  index.html
localstack-init/: create-queues.sh
reports/: co-cdp-appregistry-ui-sequence.html  co-cdp-architecture.html  co-cdp-sequence.html  identity-full-audit-report.md  identity-security-review.md  master-verification-report.md  (+7 more)
terragrunt/tools/canary/: Makefile  README.md  pyproject.toml
terragrunt/tools/canary/src/python/: canary_check_api.py
(+4971 files in other folders)
